.k8s/charts/vue/vue.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  namespace: as-test
spec:
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-js-frontend
        image: zadanie-frontend:1
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
