.k8s/charts/vue/vue.service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-service
  namespace: as-test
spec:
  selector:
    app: vue-app
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
